package com.structural.FlyweightPattern.Exercise2;

//Interface implemented by Flyweights
public interface ErrorMessage {
	//Get error message
	String getText(String code);
}
